2002-02-13  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo-mdi.c: #include <config.h> for proper i18n.
	* gedit-document.c: Same here.
	* gedit-file.c: Same.
	* gedit-file-selector-util.c: Same.
	* gedit-plugins-engine.c: Same
	* gedit-print.c: Same.
	* gedit-view.c: Same
						
2002-02-13  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-undo-manager.c: now it should work well also with
	non-ASCII chars

2002-02-12  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-ui.xml: added EditOps_5 placeholder

	* dialogs/gedit-dialog-plugin-manager.c 
	(dialog_plugin_manager_construct_tree): unref model

	* dialogs/gedit-preferences-dialog.c (finalize): unref tree model

	* dialogs/plugin-manager.glade2: fixed scrolling bug

2002-02-08  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.[ch] (gedit_document_save_a_copy_as): 
	new function

	* gedit2.[ch] (gedit_get_open_documents): new function

	* dialogs/Makefile.am: added gedit-plugin-program-location-dialog.c

	* gedit-plugin-program-location-dialog.c: new file

	* dialogs/gedit-dialogs.h (gedit_plugin_program_location_dialog):
	new function

	* dialogs/program-location-dialog.glade2: new file

2002-02-07  Federico Mena Quintero  <federico@ximian.com>

	* gedit2.c (main): Do not call setlocale().  We should not be
	forcing the locale on anyone.

2002-02-07  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.[ch] (gedit_document_get_cursor)
	(gedit_document_set_cursor): new functions
	
2002-02-06  Paolo Maggi  <maggi@athena.polito.it>

	* gedit_mdi.c (gedit_mdi_update_ui_according_to_preferences):
	fix mem leak

	* gedit-plugins-engine.c (gedit_plugins_engine_save_settings):
	ditto

	* dialogs/gedit-dialog-plugin-manager.c 
	(dialog_plugin_manager_get_selected_plugin):ditto

	* dialogs/gedit-preferences-dialog.c: warning cleans.

2002-02-06  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-view.c (gedit_view_set_tab_size): 
	now it works
	(gedit_view_calculate_real_tab_width): new static 
	function