@@ -1,5 +1,10 @@
 2002-02-14  Paolo Maggi  <maggi@athena.polito.it>
 
+	* time/time.c (create_model): set tree view model here
+	and not in create_formats_list
+
+2002-02-14  Paolo Maggi  <maggi@athena.polito.it>
+
 	* taglist/taglist.xml: split into HTML.tags and Latex.tags
 
 	* taglist/gedit-taglist-plugin-parser.c (parse_taglist_dir): 
