@@ -1,3 +1,8 @@
+2002-02-14  Paolo Maggi  <maggi@athena.polito.it>
+
+	* dialogs/gedit-dialog-plugin-manager.c 
+	(dialog_plugin_manager_get_selected_plugin): rewritten
+	
 2002-02-13  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* bonobo-mdi.c: #include <config.h> for proper i18n.
